[tool.poetry]
name = "rc-club-members"
version = "0.0.0"
description = ""
authors = ["Daniel Jones <tortxof@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.11"
psycopg2-binary = "^2.8"
beautifulsoup4 = "^4.8"
requests = "^2.22"
misaka = "^2.1"
zappa = "^0.48.2"
Flask = "^1.1"
XlsxWriter = "^1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
