[tool.poetry]
name = "rc-club-members"
version = "0.0.0"
description = ""
authors = ["Daniel Jones <tortxof@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.17.3"
psycopg2-binary = "^2.9.9"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
zappa = "^0.59.0"
Flask = "^3.0.3"
XlsxWriter = "^3.2.0"
mistletoe = "^1.3.0"
setuptools = "^69.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
